k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-svc
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: pw-dev
  ports:
  - port: 80
    targetPort: 80
